--- a/_posts/2016-06-20-排序和查找算法.md
+++ b/_posts/2016-06-20-排序和查找算法.md
@@ -6,182 +6,174 @@ summary:    排序和查找算法总结
 categories: jekyll pixyll
 ---
 
-## 排序和查找算法
 
 ### 排序算法
 
 * #### 选择排序
-	
-	```
-	
-	public class SelectSort {
-		public static void sort(int[] array){
-			int minIndex = 0;
-			int temp;
-			for(int i = 0;i<array.length;i++){
-				minIndex = i;
-				for(int j = i+1;j<array.length;j++){
-					if(array[minIndex]>array[j]){
-						minIndex = j;
-					}
-				}
-				if(minIndex != i){
-					temp = array[minIndex];
-					array[minIndex] = array[i];
-					array[i] = temp;
-				}
-			}
-		}
-		public static void main(String[] args) {
-			int[] array = new int[]{12,3,7,1,5,2};
-			sort(array);
-			for (int i = 0; i < array.length; i++) {
-				System.out.println(array[i]);
-				
-			}
-		}
-	}
-	
-	```
-* #### 堆排序
-	
-	```
-	
-	public class HeapSort {
-		public static void heapfy(int[] array,int index,int size){
-			
-			if(index < size ){
-				int left = index*2+1;
-				int right = index*2+2;
-				int large = index;
-				if(left < size){
-					if(array[left] > array[large]) large = left;
-				}
-				if(right < size){
-					if(array[right] > array[large]) large = right;
-				}
-				if(large != index){
-					int temp = array[index];
-					array[index] = array[large];
-					array[large] = temp;
-					heapfy(array, large, size);
-				}
-			}else{
-				throw new ArrayIndexOutOfBoundsException("index should not more than size");
-			}
-		}
-		public static void create_heap(int[] array,int size){
-			for(int i = size-1 ;i >= 0 ;i--){
-				heapfy(array,i,size);
-			}
-		}
-		public static void sort_heap(int[] array,int size){
-			for(int i = size-1;i >= 0;i--){
-				create_heap(array, i+1);
-				int temp = array[0];
-				array[0] = array[i];
-				array[i] = temp;
-			}
-		}
-		public static void main(String[] args) {
-			int[] array = new int[]{2,1,8,3,6,5,11,12};
-			sort_heap(array, array.length);
-			for (int i = 0; i < array.length; i++) {
-				System.out.println(array[i]);
-			}
-		}
-	}
 
-	```
-	
-* #### 插入排序
-	
-	```
-	public class InsertSort {
-		public static void sort(int[] a){
-	       for(int i=1;i<a.length;i++){
-		       int temp=a[i],j=i;
-		       if(a[j-1]>temp){
-		            while(j>=1&&a[j-1]>temp){
-			             a[j]=a[j-1];
-			             j--;
-		            }
-		       }
-		       a[j]=temp;
-	       }
-	    }
-		public static void main(String[] args) {
-			int[] array = new int[]{2,1,5,3,6,8,4};
-			sort(array);
-			for (int i = 0; i < array.length; i++) {
-				int j = array[i];
-				System.out.println(array[i]);
-			}
-		}
-	}
-	```
-	
+  public class SelectSort {
+    	public static void sort(int[] array){
+    		int minIndex = 0;
+    		int temp;
+    		for(int i = 0;i<array.length;i++){
+    			minIndex = i;
+    			for(int j = i+1;j<array.length;j++){
+    				if(array[minIndex]>array[j]){
+    					minIndex = j;
+    				}
+    			}
+    			if(minIndex != i){
+    				temp = array[minIndex];
+    				array[minIndex] = array[i];
+    				array[i] = temp;
+    			}
+    		}
+    	}
+    	public static void main(String[] args) {
+    		int[] array = new int[]{12,3,7,1,5,2};
+    		sort(array);
+    		for (int i = 0; i < array.length; i++) {
+    			System.out.println(array[i]);
+    			
+    		}
+    	}
+    }
+
+* #### 堆排序
+
+  ```
+  public class HeapSort {
+  	public static void heapfy(int[] array,int index,int size){
+  		if(index < size ){
+  			int left = index*2+1;
+  			int right = index*2+2;
+  			int large = index;
+  			if(left < size){
+  				if(array[left] > array[large]) large = left;
+  			}
+  			if(right < size){
+  				if(array[right] > array[large]) large = right;
+  			}
+  			if(large != index){
+  				int temp = array[index];
+  				array[index] = array[large];
+  				array[large] = temp;
+  				heapfy(array, large, size);
+  			}
+  		}else{
+  			throw new ArrayIndexOutOfBoundsException("index should not more than size");
+  		}
+  	}
+  	public static void create_heap(int[] array,int size){
+  		for(int i = size-1 ;i >= 0 ;i--){
+  			heapfy(array,i,size);
+  		}
+  	}
+  	public static void sort_heap(int[] array,int size){
+  		for(int i = size-1;i >= 0;i--){
+  			create_heap(array, i+1);
+  			int temp = array[0];
+  			array[0] = array[i];
+  			array[i] = temp;
+  		}
+  	}
+  	public static void main(String[] args) {
+  		int[] array = new int[]{2,1,8,3,6,5,11,12};
+  		sort_heap(array, array.length);
+  		for (int i = 0; i < array.length; i++) {
+  			System.out.println(array[i]);
+  		}
+  	}
+  }
+
+  插入排序
+  ```
+  ```
+  public class InsertSort {
+  	public static void sort(int[] a){
+         for(int i=1;i<a.length;i++){
+  	       int temp=a[i],j=i;
+  	       if(a[j-1]>temp){
+  	            while(j>=1&&a[j-1]>temp){
+  		             a[j]=a[j-1];
+  		             j--;
+  	            }
+  	       }
+  	       a[j]=temp;
+         }
+      }
+  	public static void main(String[] args) {
+  		int[] array = new int[]{2,1,5,3,6,8,4};
+  		sort(array);
+  		for (int i = 0; i < array.length; i++) {
+  			int j = array[i];
+  			System.out.println(array[i]);
+  		}
+  	}
+  }
+  ```
+
 * #### 冒泡排序
-	
-	```
-	public class BubbleSort {
-		public  static void sort(int[] a){
-			boolean b = false;
-			int temp = 0;
-			for(int i = a.length;i>0;i--){
-				for(int j = 0;j < i-1;j++ ){
-					if(a[j]>a[j+1]){
-						temp = a[j];
-						a[j] = a[j+1];
-						a[j+1]= temp;
-						b = true;
-					}
-				}
-				if(!b){
-					break;
-				}
-			}
-		}
-		
-		public static void main(String[] args) {
-			int[] a = new int[]{1,2,3,4,5,6,7};
-			sort(a);
-			for (int i = 0; i < a.length; i++) {
-				System.out.println(a[i]);
-			}
-		}
-	}
-	```
+
+  ```
+  public class BubbleSort {
+  	public  static void sort(int[] a){
+  		boolean b = false;
+  		int temp = 0;
+  		for(int i = a.length;i>0;i--){
+  			for(int j = 0;j < i-1;j++ ){
+  				if(a[j]>a[j+1]){
+  					temp = a[j];
+  					a[j] = a[j+1];
+  					a[j+1]= temp;
+  					b = true;
+  				}
+  			}
+  			if(!b){
+  				break;
+  			}
+  		}
+  	}
+  	
+  	public static void main(String[] args) {
+  		int[] a = new int[]{1,2,3,4,5,6,7};
+  		sort(a);
+  		for (int i = 0; i < a.length; i++) {
+  			System.out.println(a[i]);
+  		}
+  	}
+  }
+  ```
 
 
 ### 查找算法
-	
+
 * #### 二分法
-	```
-	public class BinarySearch {
-		public static int search(int[] array,int key){
-			if(array == null ){
-				return -1;
-			}
-			int low = 0;
-			int high = array.length-1;
-			int mid = -1;
-			while(low <= high){
-				mid = (low+high)/2;
-				if(key == array[mid]){
-					break;
-				}else if(key > array[mid]){
-					low = mid+1;
-				}else{
-					high = mid-1;
-				}
-			}
-			return mid;
-		}
-		public static void main(String[] arg){
-			int[] array = new int[]{1,4,6,8,9};
-			System.out.println(search(array,1));
-		}
-	}
-	```
-	
+  ```
+  public class BinarySearch {
+  	public static int search(int[] array,int key){
+  		if(array == null ){
+  			return -1;
+  		}
+  		int low = 0;
+  		int high = array.length-1;
+  		int mid = -1;
+  		while(low <= high){
+  			mid = (low+high)/2;
+  			if(key == array[mid]){
+  				break;
+  			}else if(key > array[mid]){
+  				low = mid+1;
+  			}else{
+  				high = mid-1;
+  			}
+  		}
+  		return mid;
+  	}
+  	public static void main(String[] arg){
+  		int[] array = new int[]{1,4,6,8,9};
+  		System.out.println(search(array,1));
+  	}
+  }
+  ```
+
