--- a/_posts/2016-06-20-排序和查找算法.md
+++ b/_posts/2016-06-20-排序和查找算法.md
@@ -11,7 +11,7 @@ categories: jekyll pixyll
 
 * #### 选择排序
 
-  ```
+  ```java
   public class SelectSort {
 
     	public static void sort(int[] array){
@@ -56,7 +56,6 @@ categories: jekyll pixyll
     		}
     	}
     }
-
   ```
 
   ​
@@ -65,7 +64,7 @@ categories: jekyll pixyll
 
 * #### 堆排序
 
-  ```
+  ```java
   public class HeapSort {
   	public static void heapfy(int[] array,int index,int size){
   		if(index < size ){
@@ -109,10 +108,11 @@ categories: jekyll pixyll
   		}
   	}
   }
+  ```
 
-  插入排序
-  ```
-  ```
+* #### 插入排序
+
+  ```java
   public class InsertSort {
   	public static void sort(int[] a){
          for(int i=1;i<a.length;i++){
@@ -137,9 +137,13 @@ categories: jekyll pixyll
   }
   ```
 
+  ​
+
+  ​
+
 * #### 冒泡排序
 
-  ```
+  ```java
   public class BubbleSort {
   	public  static void sort(int[] a){
   		boolean b = false;
@@ -173,7 +177,7 @@ categories: jekyll pixyll
 ### 查找算法
 
 * #### 二分法
-  ```
+  ```java
   public class BinarySearch {
   	public static int search(int[] array,int key){
   		if(array == null ){
